# claimledger

./: .cursorrules  .gitignore  .gitignore.additions  COMMIT_RECOMMENDATIONS.md  CONTRIBUTING.md  FILE_REVIEW_RESULTS.md  Makefile  README.md  REMAINING_FILES.md
backend/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml  test_gateway_simple.py
backend/scripts/: check_balance.py  check_user_exists.py  create_circle_wallets.py  create_developer_wallet.py  create_wallets_for_test_users.py  get_testnet_usdc_gateway.py  migrate_agent_logs.py  migrate_gemini_agents.py  register_entity_secret.py  test_circle_auth_e2e.py  test_gateway_integration.py  test_pdf_extraction.py  validate_circle_credentials.py  verify_demo_user_wallets.py
backend/src/: __init__.py  database.py  main.py  models.py
backend/src/agent/: __init__.py  adk_runtime.py  adk_schemas.py  adk_tools.py  agent.py  orchestrator.py  tools.py  tools_cost_estimation.py  tools_extraction.py  tools_validation.py
backend/src/agent/adk_agents/: __init__.py  document_agent.py  fraud_agent.py  image_agent.py  orchestrator.py  orchestrator_agent.py  reasoning_agent.py  test_agent.py
backend/src/agent/agents/: __init__.py  document_agent.py  fraud_agent.py  image_agent.py  reasoning_agent.py
backend/src/api/: __init__.py  admin.py  agent.py  auth.py  blockchain.py  claims.py  verifier.py
backend/src/services/: __init__.py  arc_rpc.py  auth.py  blockchain.py  circle_wallets.py  developer_wallets.py  gas_tracking.py  gateway.py  verifier_client.py  x402_client.py
backend/tests/: COMPLETE_FLOW_ANALYSIS.md  FLOW_ANALYSIS.md  IMPROVEMENTS_QUICK_REFERENCE.md  PROMPT_IMPROVEMENTS.md  README.md  TEST_PLAN_RESULTS.md  TEST_RESULTS_SUMMARY.md  conftest.py  test_adk_setup.py  test_agent.py  test_auth.py  test_blockchain.py  test_claims.py  test_detailed_scenarios.py  test_e2e_agent_flow.py  test_models.py  test_orchestrator.py  test_orchestrator_plan_improvements.py  test_pdf_complete_flow.py  test_performance.py  test_verifier.py
backend/tests/test_agents/: __init__.py  test_document_agent.py  test_error_handling.py  test_fraud_agent.py  test_image_agent.py  test_real_api.py  test_reasoning_agent.py
backend/tests/test_services/: test_auth_service.py  test_developer_wallets.py  test_gateway.py  test_x402_client.py
contracts/: foundry.toml  setup-env.sh  test-contract.sh
docs/: ADK_AUTONOMOUS_TOOLS.md  BACKEND_AUTH_TESTING.md  CIRCLE_API_KEYS_SETUP.md  CIRCLE_ENTITY_SECRET_SETUP.md  CIRCLE_SDK_BUILD_ISSUE_EXPLANATION.md  CIRCLE_SETUP.md  CIRCLE_TESTNET_SETUP.md  CIRCLE_WALLETS_INTEGRATION_TYPES.md  CIRCLE_WALLETS_TESTING.md  DEPLOYMENT_GUIDE.md  ENVIRONMENT_VARIABLES.md  HLD.md  LLD.md  MODULAR_VS_USER_CONTROLLED_ANALYSIS.md  QUICK_START_TESTING.md  (+5 more)
(+77 files in other folders)
